package com.example.ex0251.ex1;

public abstract class Vehicle{
    public abstract void accelerate();
    public abstract void start();
    public abstract void stop();
}
